--- a/index.html
+++ b/index.html
@@ -88,11 +88,12 @@
         <a-entity
           id="template-model"
           gltf-model="#template"
-          position="0 0 0"
+          position="-2 0 0"
           rotation="0 0 0"
           scale="1 1 1"
           class="clickable"
-          gesture-handler        
+          gesture-handler
+          animation-mixer        
         >
         </a-entity>
 
